# Network.Programming.C.20191

SI_Client/: CMakeLists.txt  main.c
SI_Client/engine/: assets.c  assets.h  engine.c  engine.h  network.c  network.h  renderer.h  screen.c  screen.h
SI_Client/game/: enemy.c  enemy.h  gameobject.c  gameobject.h  player.c  player.h
SI_Client/screen/: connect.c  connect.h  field.c  field.h  game.c  game.h  gameover.c  gameover.h  main_menu.c  main_menu.h
SI_Client/util/: font.c  font.h  queue.c  queue.h  time.c
SI_Server/: CMakeLists.txt  main.c
SI_Server/game/: enemy.h  field.c  game.c  game.h  gameobject.c  gameobject.h  player.h  rectangle.c  rectangle.h
SI_Server/network/: net.c  net.h  packer.c  packer.h  packet.c  packet.h
SI_Server/util/: queue.c  queue.h  time.h
